--- a/global.scss
+++ b/global.scss
@@ -2,7 +2,7 @@
 @use "./src/sass/utils/mixins";
 
 .light {
-    background-color: #fff;
+    background-color: variables.$dark-contrast-color;
     font-weight: 500;
 
     & a{
