--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -1,6 +1,6 @@
 @use "../../sass/utils/variables";
 
-.list{
+.navBar{
     display: flex;
     flex: 1.3;
     justify-content: right;
@@ -63,10 +63,10 @@
             background-size: cover;
         }
         
-        .list{
+        .navBar{
             &__item{
                 @media screen and (max-width: variables.$breakpoint-mobile) {
-                    background-color: variables.$primary-color;
+                    background-color: variables.$terciary-color;
                     border-radius: 15px;
                     border: 2px solid variables.$dark-contrast-color;
                     padding: 10px;
@@ -98,12 +98,12 @@
             background-size: cover;
         }
 
-        .list{
+        .navBar{
             &__item{
                 @media screen and (max-width: variables.$breakpoint-mobile) {
                     background-color: variables.$dark-contrast-color;
                     border-radius: 15px;
-                    border: 2px solid variables.$primary-color;
+                    border: 2px solid variables.$terciary-color;;
                     padding: 10px;
                     transition: 1s;
                 }
@@ -118,7 +118,7 @@
     
                 & a{
                     @media screen and (max-width: variables.$breakpoint-mobile) {
-                        color: variables.$primary-color;
+                        color: variables.$terciary-color;
                     }
                     &:hover{
                         @media screen and (max-width: variables.$breakpoint-mobile) {
