--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -69,11 +69,12 @@
             left:5px;
         }
         &:nth-child(2){
+            top: 6px;
             right:9px;
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
                 right:7px;
-                top: 4.7px;
+                top: 3.8px;
             }
         }
     }
@@ -106,5 +107,6 @@
 
     &--dark{
         background-color: variables.$dark-contrast-color;
+        border: 1px outset black;        
     }
 }
