--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -19,3 +19,10 @@ $breakpoint-mobile: 768px;
 $maxWidth : 1600px;
 $mediumWidth : 992px;
 $minWidth : 768px;
+
+$width_img_cover_slider_mobile: 235px;
+$height_img_cover_slider_mobile: 350px;
+$width_img_cover_slider_tablette: 400px;
+$height_img_cover_slider_tablette: 228px;
+$width_img_cover_slider_desktop: 450px;
+$height_img_cover_slider_desktop: 235px;
