Maj: Ajustement des variables pour un changement de couleur plus simple en fonction des modes

--- a/global.scss
+++ b/global.scss
@@ -2,40 +2,40 @@
 @use "./src/sass/utils/mixins";
 
 .light {
-    background-color: variables.$dark-contrast-color;
+    background-color: variables.$background-desktop--projets--light;
     font-weight: 500;
 
     & a{
-        color: variables.$dark-contrast-color;
+        color: variables.$links-desktop--projets--light;
 
         @media screen and (max-width: variables.$breakpoint-tablette) {
-            color: variables.$light-contrast-color;
+            color: variables.$links-tablette--projets--light;
             font-weight: 600;
         }
         @media screen and (max-width: variables.$breakpoint-mobile) {
-            color: variables.$light-contrast-color;
+            color: variables.$links-mobile--projets--light;
         }
     }
 
     & i{
-        color: variables.$light-contrast-color;
+        color: variables.$icone-desktop--projets--light;
     }
 
 }
 
 .dark {
-    background-color: variables.$light-contrast-color;
+    background-color: variables.$background-desktop--projets--dark;
     position: relative;
 }
 
 @media(prefers-color-scheme: light){
     body {
-        background-color: variables.$dark-contrast-color;
+        background-color: variables.$background-desktop--projets--light;
     }
 }
 
 @media(prefers-color-scheme: dark){
     body {
-        background-color: variables.$light-contrast-color;
+        background-color: variables.$background-desktop--projets--dark;
     }
 }
