--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -55,7 +55,7 @@
     border-radius: variables.$big-radius;
     
     & i{
-        color: variables.$light-contrast-color;
+        color: variables.$slider-icone-desktop--slider--light;
         position: absolute;
         top: 7px;
         z-index: 1;
@@ -87,26 +87,26 @@
         left: 3px;
         bottom: 3px;
         border-radius: variables.$big-radius;
-        background-color: rgb(7, 33, 110);
+        background-color: variables.$slider-before-background-desktop--switch;
         transition: 0.4s;
         z-index: 2;
         transform: translateX(0px);
     }
 
     &--light{
-        background-color: #1c76d3;
+        background-color: variables.$slider-background-desktop--switch--light;
 
         &::before{
-            background-color: #fff;
+            background-color: variables.$slider-before-background-desktop--switch--light;
         }
 
         & i{
-            color: rgb(8, 8, 154);
+            color: variables.$slider-icone-desktop--switch--light;
         }
     }
 
     &--dark{
-        background-color: variables.$dark-contrast-color;
+        background-color: variables.$slider-background-desktop--switch--dark;
         border: 1px outset black;        
     }
 }
