--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -61,7 +61,6 @@
         display: flex;
         flex: 0.7;
         justify-content: right;
-        border-right: 0.15em solid variables.$primary-color;
         letter-spacing: 0.10em;
         animation: blink 0.75s step-end infinite;
         font-size: 17px;
@@ -69,7 +68,6 @@
 
         @media screen and (max-width: variables.$breakpoint-tablette) {
             font-size: 14px;
-            color: variables.$dark-contrast-color;
         }
 
         @media screen and (max-width: variables.$breakpoint-mobile) {
@@ -110,30 +108,30 @@
     /************************************/
     &--light{
         background-image: url(../../assets/img/bg_light_header.webp);
-        color: variables.$light-contrast-color;   
+        color: variables.$header-desktop--header--light;   
         
         #autotext{
-            color: rgb(8, 77, 92);
+            color: variables.$autotext-desktop--header--light;
             font-weight: 600;
+            border-right: 0.15em solid variables.$autotext-desktop--header--light;
     
             @media screen and (max-width: variables.$breakpoint-tablette) {
-                color: rgb(184, 236, 186);
+                color: variables.$autotext-tablette--header--light;
             }
         }        
     }
     
     &--dark{
         background-image: url(../../assets/img/bg_dark_header.webp);
-        color: variables.$dark-contrast-color; 
-        // box-shadow: 0px 10px 10px 0px inset rgba(25, 155, 79, 0.3); 
-    
+        color: variables.$header-desktop--header--dark; 
 
         #autotext{   
-            color: rgb(49, 38, 79);
+            color: variables.$autotext-desktop--header--dark;
             font-weight: 800; 
+            border-right: 0.15em solid variables.$autotext-desktop--header--dark;
     
             @media screen and (max-width: variables.$breakpoint-tablette) {
-                color: rgb(233, 129, 233);
+                color: variables.$autotext-tablette-header--dark;
             } 
         }
     }
@@ -174,7 +172,7 @@
        border-color: transparent; 
     }
     50% {
-        border-color: variables.$primary-color;
+        border-color: variables.$autotext-blink-desktop--header;
     }
 }
 
