--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,7 +1,7 @@
 @use "../../sass/utils/variables";
 
 .container{
-    color: variables.$dark-contrast-color;
+    color: variables.$light-color;
     display: flex;
 
     .form__contact{
@@ -19,14 +19,14 @@
                 display: block;
                 width: 100%;
                 border-radius: variables.$medium-radius;
-                border: 1px solid variables.$dark-contrast-color;
+                border: 1px solid variables.$light-color;
     
                 .input{
-                    color: variables.$light-contrast-color;
-                    border: 1px solid variables.$dark-contrast-color;
+                    color: variables.$dark-color;
+                    border: 1px solid variables.$light-color;
                     height: 50px;
                     width: 100%;
-                    background-color: variables.$dark-contrast-color;
+                    background-color: variables.$light-color;
                 }
             }
 
