--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -32,7 +32,7 @@
     .boxinfos{
         margin-top: 50px;
         width: 100%;
-        color: variables.$terciary-color;
+        color: variables.$boxinfos-desktop--projets;
         padding: 0px;
              
         .container{
@@ -106,25 +106,25 @@
         .container{
 
             &__title{
-                color:  rgba(62, 231, 40, 0.773);
+                color: variables.$container__title-desktop--projets--dark;
             }
 
             &__technologies{
      
-                color: variables.$dark-contrast-color;
+                color: variables.$container__technologies-desktop--projets--dark;
             }
 
             &__description{
-                color: variables.$dark-contrast-color;          
+                color: variables.$container__description-desktop--projets--dark;          
             }
 
         
             &__sources{
                 button{
-                    background-color: variables.$primary-color;
-                    border : 1px solid variables.$primary-color;
+                    background-color: variables.$container__sources-button-background-desktop--project--dark;
+                    border : 1px solid variables.$container__sources-button-border-desktop--project--dark;
                     & a{
-                        color: variables.$dark-contrast-color;
+                        color: variables.$container__sources-links-button-border-desktop--project--dark;
                     }
                 }
             }
@@ -140,14 +140,18 @@
         }
 
         .container{
+
+            &__title{
+                color: variables.$container__title-desktop--projets--light;
+            }
             
             &__sources{
     
                 button{
-                    border : 1px solid variables.$terciary-color;
-                    background-color: variables.$terciary-color;
+                    border : 1px solid variables.$container__sources-button-border-desktop--project--light;
+                    background-color: variables.$container__sources-button-background-desktop--project--light;
                     & a{
-                        color: variables.$dark-contrast-color;
+                        color: variables.$container__sources-links-button-border-desktop--project--light;
                     }
                 }
             }
