Fix: - Changement de noms de variables - variables color - test pour Leorio

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -77,7 +77,7 @@ $navBar__item-background-mobile--navbar--light: $dark-color;
 $navBar__item-border-mobile--navbar--light: $primary-color; 
 $navBar__item-active-background-mobile--navbar--light: rgb(155, 216, 243);
 $navBar__item-active-border-mobile--navbar--light: #388439;
-$links-mobile--navbar--light:  $primary-color;
+$links-mobile--navbar--light:  $light-color;
 // -- Component Switch
 $slider-background-desktop--switch--light:   #1c76d3;
 $slider-before-background-desktop--switch--light:  #fff; 
