--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -21,14 +21,14 @@
         margin-bottom: 15px;
     }
 
-
     &__chevron{
+        cursor: pointer;
         & img{ 
             width: 50px;
-            height: 50px;
+            height: 40px;
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                width: 30px;
+                width: 40px;
                 height: 30px;
             }
         }
@@ -41,8 +41,12 @@
             transform: translateY(-50%);
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                left: -20px;
+                left: -80px;
             }
+
+            &:hover{
+                transform: translateY(-50%) scale(1.1);
+            }   
         }
         
         &__next{
@@ -51,9 +55,14 @@
             right: -100px;
             top: 50%;
             transform: translateY(-50%);
-
+ 
+      
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                right: -20px;
+                right: -80px;
+            }
+
+            &:hover{
+                transform: translateY(-50%) scale(1.1);
             }
         }
     }
