--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -44,13 +44,9 @@
     
             &__description{
                 padding: 10px;   
-                
-                @media screen and (max-width: variables.$breakpoint-tablette) {
-                    
-                }
-            
+                            
                 @media screen and (max-width: variables.$breakpoint-mobile) {
-                    font-size: 14px;
+                    font-size: variables.$container__description-fontSize-mobile--projets;
                 }
             }
     
