--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -24,7 +24,14 @@ $slider-before-background-desktop--switch:rgb(7, 33, 110);
 
 // -- global.scss
 $background-desktop--projets--dark: $dark-color;
-
+// -- Layout header
+$header-desktop--header--dark: $light-color;
+$autotext-fontSize-desktop--header--dark:  rgb(49, 38, 79);
+$autotext-tablette-header--dark: rgb(233, 129, 233);
+// -- Layout footer
+$footer-desktop--footer--dark: $dark-color;
+$footer-background-desktop--footer--dark: $light-color;
+$reseaux__item-links-icone-desktop--footer--dark: $dark-color;
 // --page projets
 $container__title-desktop--projets--dark: rgba(62, 231, 40, 0.773);
 $container__technologies-desktop--projets--dark:  $light-color;
@@ -32,14 +39,6 @@ $container__description-desktop--projets--dark:  $light-color;
 $container__sources-button-background-desktop--project--dark:  #388439; 
 $container__sources-button-border-desktop--project--dark: #388439;
 $container__sources-links-button-border-desktop--project--dark: $light-color;
-// -- Layout header
-$header-desktop--header--dark: $light-color;
-$autotext-desktop--header--dark:  rgb(49, 38, 79);
-$autotext-tablette-header--dark: rgb(233, 129, 233);
-// -- Layout footer
-$footer-desktop--footer--dark: $dark-color;
-$footer-background-desktop--footer--dark: $light-color;
-$reseaux__item-links-icone-desktop--footer--dark: $dark-color;
 // -- Component navBar
 $navBar__item-background-mobile--navbar--dark: $primary-color; 
 $navBar__item-border-mobile--navbar--dark: $dark-color; 
@@ -57,21 +56,20 @@ $links-tablette--projets--light: $dark-color;
 $links-mobile--projets--light: $dark-color;
 $links-desktop--projets--light: $dark-color;
 $icone-desktop--projets--light: $dark-color;
-
-// -- page projets
-$container__title-desktop--projets--light:  $primary-color;
-$container__technologies-desktop--projets--light:  $dark-color;
-$container__sources-button-background-desktop--project--light: $primary-color; 
-$container__sources-button-border-desktop--project--light: $primary-color;
-$container__sources-links-button-border-desktop--project--light: $light-color;
 // -- Layout header
 $header-desktop--header--light: $light-color;
-$autotext-desktop--header--light: rgb(8, 77, 92);
-$autotext-tablette--header--light: rgb(184, 236, 186);
+$autotext-fontSize-desktop--header--light: rgb(8, 77, 92);
+$autotext-fontSize-tablette--header--light: rgb(184, 236, 186);
 // -- Layout footer
 $footer-desktop--footer--light: $light-color;
 $footer-background-desktop--footer--light: $dark-color;
 $reseaux__item-links-icone-desktop--footer--light: $light-color;
+// -- page projets
+$container__title-desktop--projets--light: $primary-color;
+$container__technologies-desktop--projets--light: $dark-color;
+$container__sources-button-background-desktop--project--light: $primary-color; 
+$container__sources-button-border-desktop--project--light: $primary-color;
+$container__sources-links-button-border-desktop--project--light: $light-color;
 // -- Component navBar
 $navBar__item-background-mobile--navbar--light: $dark-color;
 $navBar__item-border-mobile--navbar--light: $primary-color; 
@@ -85,8 +83,26 @@ $slider-icone-desktop--switch--light: rgb(8, 8, 154);
 // -- Component Slider
 $slider-icone-desktop--slider--light: $dark-color;
 
-// -- Polices -- //
-/*****************/
+// -- Font Sizes -- //
+/********************/
+// -- Layout header
+$autotext-fontSize-desktop--header: 17px;
+$autotext-fontSize-tablette--header: 14px;
+// -- Layout footer
+$infos-fontSize-tablette--footer: 15px;
+$infos-fontSize-mobile--footer: 13px;
+$reseaux-fontSize-desktop--footer: 50px;
+// -- page projets
+$container__description-fontSize-mobile--projets: 15px;
+// -- Component navBar
+$navbar-fontSize-desktop--navbar: 20px;
+$navbar__item-fontSize-tablette--navbar: 18px;
+$navbar__item-fontSize-mobile--navbar: 18px;
+// -- Component Switch
+$slider-icone-fontSize-mobile--switch: 9px;
+
+// -- Fonts -- //
+/***************/
 $text-font: 'Saira Semi Condensed';
 
 // Radius
