--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -18,7 +18,7 @@
                 padding: 20px 0px 0px 0px;
                 display: block;
                 width: 100%;
-                border-radius: variables.$medium-radius;
+                border-radius: variables.$radius--10;
                 border: 1px solid variables.$light-color;
     
                 .input{
