--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: variables.$big-radius;
+        border-radius: variables.$radius--20;
         position: relative;
     }
 
@@ -18,7 +18,7 @@
         position: absolute;
         top: 370px;
         z-index: -9999;
-        border-radius: 10px;
+        border-radius: variables.$radius--10;
 
         @media screen and (max-width: variables.$breakpoint-tablette) {
             top: 365px;
@@ -57,7 +57,7 @@
                 .technologies{
                     display: flex;
                     align-items: center;
-                    border-radius: variables.$small-radius;
+                    border-radius: variables.$radius--5;
                     flex-basis: 100%;
      
                     &__name{
@@ -84,7 +84,7 @@
                 padding: 5px;
     
                 button{
-                    border-radius: variables.$medium-radius;
+                    border-radius: variables.$radius--10;
                     padding: 5px;    
                 }
             }   
