Fix: size footer infos error

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -69,7 +69,7 @@ $container__sources-button-background-desktop--project--light: $primary-color;
 $container__sources-button-border-desktop--project--light: $primary-color;
 $container__sources-links-button-border-desktop--project--light: $light-color;
 // -- Component navBar
-$navBar__item-background-mobile--navbar--light: $dark-color;
+$navBar__item-background-mobile--navbar--light: #13589f;
 $navBar__item-border-mobile--navbar--light: $primary-color; 
 $navBar__item-active-background-mobile--navbar--light: rgb(155, 216, 243);
 $navBar__item-active-border-mobile--navbar--light: #388439;
@@ -95,7 +95,7 @@ $container__description-fontSize-mobile--projets: 15px;
 // -- Component navBar
 $navbar-fontSize-desktop--navbar: 20px;
 $navbar__item-fontSize-tablette--navbar: 18px;
-$navbar__item-fontSize-mobile--navbar: 18px;
+$navbar__item-fontSize-mobile--navbar: 25px;
 // -- Component Switch
 $slider-icone-fontSize-mobile--switch: 9px;
 
