Fix: Test police title Ajustement du background title en fonction

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -102,6 +102,7 @@ $slider-icone-fontSize-mobile--switch: 9px;
 // -- Fonts -- //
 /***************/
 $text-font: 'Saira Semi Condensed';
+$container__title-fontFamily-desktop--projets: 'Kalam', cursive;
 
 // -- Radius -- //
 /****************/
