--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -16,16 +16,16 @@
         width: 100%;
         height: 47.6px;
         position: absolute;
-        top: 370px;
+        top: 365px;
         z-index: -9999;
         border-radius: variables.$radius--10;
 
         @media screen and (max-width: variables.$breakpoint-tablette) {
-            top: 365px;
+            top: 360px;
         }
     
         @media screen and (max-width: variables.$breakpoint-mobile) {
-            top: 460px;
+            top: 465px;
         }
     }
 
@@ -40,6 +40,7 @@
             &__title{
                 padding: 10px;
                 margin-bottom: 10px;
+                font-family: variables.$container__title-fontFamily-desktop--projets;
             }
     
             &__description{
